# forge

./: .gitignore  AGENTS.md.template  CLAUDE.md.template  FORGE_PROJECT_OVERVIEW.md  LICENSE  README.md  SKILL.md  config.example.yaml  install.sh  main.py  pyproject.toml
agents/: planner.md  reviewer.md  solver.md  writer.md
commands/: init.md  solve.md  study.md
forge_runtime/: __init__.py  cli.py  config.py  runtime.py  sync.py
skills/coder/: SKILL.md
skills/init/: SKILL.md
skills/math/: SKILL.md
skills/reviewer/: SKILL.md
skills/solve/: SKILL.md
skills/study/: SKILL.md
skills/writer/: SKILL.md
styles/: concise.md  formal.md  simple.md
templates/: gost.typ.ru  template.typ  titlepage.typ  titlepage.typ.ru
